<resources>
    <string name="app_name">ECommerceList</string>
    <string name="menu_home">Home</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_profile">Profile</string>
    <string name="back">Back</string>
    <string name="search_product">Search here..</string>
    <string name="price_tag">$ %d.0</string>
    <string name="rating_tag">%s/5.0</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="brand">Brand</string>
    <string name="stock">Stock</string>
    <string name="detail_image">Detail Image</string>
    <string name="empty_wishlist">Your Wishlist is Empty</string>
</resources>