...
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(8.dp),
            verticalArrangement = Arrangement.spacedBy(8.dp),
            modifier = modifier
                .padding(it)
                .testTag("ProductList")
        ) {
            items(productsItem, key = { it.product.id }) { product ->
                ProductItem(
                    title = product.product.title,
                    image = product.product.thumbnail,
                    price = product.product.price,
...
